adding masinfo page

--- a/MyFirstApp/src/pages/home/home.html
+++ b/MyFirstApp/src/pages/home/home.html
@@ -18,6 +18,9 @@
 
 <ion-content padding>
 
+  <p>Ejemplo de cómo ir a otra página</p>
+  <button ion-button (click)="gotoMasinfo()">Mas info</button>
+
   <!-- previous buttons -->
   <!--
   <button ion-button>Button</button>
