dynamic nav and grid added

--- a/MyFirstApp/src/pages/home/home.html
+++ b/MyFirstApp/src/pages/home/home.html
@@ -18,8 +18,17 @@
 
 <ion-content padding>
 
+  <ion-grid>
+    <ion-row>
+      <ion-col><p>column</p></ion-col>
+      <ion-col><p>2 of 2</p></ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <!-- Mas info button -->
+  <!--
   <p>Ejemplo de cómo ir a otra página</p>
-  <button ion-button (click)="gotoMasinfo()">Mas info</button>
+  <button ion-button (click)="gotoMasinfo()">Mas info</button>-->
 
   <!-- previous buttons -->
   <!--
