Enter Alert Added

--- a/MyFirstApp/src/pages/home/home.html
+++ b/MyFirstApp/src/pages/home/home.html
@@ -18,12 +18,17 @@
 
 <ion-content padding>
 
+  <button ion-button block color="dark" (click)="doBasicAlert()">Show basic alert</button>
+  <button ion-button block color="dark" (click)="doEnterAlert()">Show enter alert</button>
+
+  <!-- Grid -->
+  <!--
   <ion-grid>
     <ion-row>
       <ion-col><p>column</p></ion-col>
       <ion-col><p>2 of 2</p></ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid>-->
 
   <!-- Mas info button -->
   <!--
